add web interface for api
