# internal/handler/movie.go
@@ -11,13 +11,16 @@ import (
 // getAllMovies возвращает список всех фильмов.
 // @Summary Получить все фильмы
 // @Description Получает список всех фильмов с возможностью сортировки.
-// @Tags Movies
+// @Tags /api/movies
 // @Produce json
 // @Param sort_by query string false "Критерий сортировки (например, 'rating')"
 // @Param sort_order query string false "Порядок сортировки (например, 'asc' или 'desc')"
 // @Success 200 {array} model.Movie "Список фильмов"
+// @Failure 400 {object} ErrorResponse "Некорректный запрос или данные"
+// @Failure 405 {object} ErrorResponse "Некорректный метод"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /api/movies [get]
-// @Security BearerAuth
+// @Security ApiKeyAuth
 func (h *Handler) getAllMovies(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		newErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -48,13 +51,16 @@ func (h *Handler) getAllMovies(w http.ResponseWriter, r *http.Request) {
 // createMovie создает новый фильм.
 // @Summary Создать фильм
 // @Description Создает новый фильм.
-// @Tags Movies
+// @Tags /api/movie
 // @Accept json
 // @Produce json
 // @Param movie body model.MovieWithActors true "Данные нового фильма"
 // @Success 201 "Фильм создан успешно"
+// @Failure 400 {object} ErrorResponse "Некорректный запрос или данные"
+// @Failure 403 {object} ErrorResponse "Некорректная роль"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /api/movie [post]
-// @Security BearerAuth
+// @Security ApiKeyAuth
 func (h *Handler) createMovie(w http.ResponseWriter, r *http.Request) {
 	role, err := getUserRole(r)
 	if err != nil {
@@ -86,11 +92,15 @@ func (h *Handler) createMovie(w http.ResponseWriter, r *http.Request) {
 // deleteMovie удаляет фильм по его идентификатору.
 // @Summary Удалить фильм
 // @Description Удаляет фильм по его идентификатору.
-// @Tags Movies
+// @Tags /api/movie/{id}
 // @Param id path int true "Идентификатор фильма"
-// @Success 201 "Фильм удален успешно"
+// @Success 200 "Фильм удален успешно"
+// @Failure 400 {object} ErrorResponse "Некорректный запрос или данные"
+// @Failure 403 {object} ErrorResponse "Некорректная роль"
+// @Failure 405 {object} ErrorResponse "Некорректный метод"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /api/movie/{id} [delete]
-// @Security BearerAuth
+// @Security ApiKeyAuth
 func (h *Handler) deleteMovie(w http.ResponseWriter, r *http.Request) {
 	role, err := getUserRole(r)
 	if err != nil {
@@ -130,13 +140,16 @@ func (h *Handler) deleteMovie(w http.ResponseWriter, r *http.Request) {
 // searchMovie выполняет поиск фильмов по указанным критериям.
 // @Summary Поиск фильмов
 // @Description Выполняет поиск фильмов по указанным критериям (название или актер).
-// @Tags Movies
+// @Tags /api/movie/search
 // @Produce json
 // @Param title query string false "Название фильма для поиска"
 // @Param actor query string false "Имя актера для поиска"
 // @Success 200 {array} model.MovieWithActors "Список фильмов, удовлетворяющих критериям поиска"
-// @Router /api/movie [get]
-// @Security BearerAuth
+// @Failure 400 {object} ErrorResponse "Некорректный запрос или данные"
+// @Failure 403 {object} ErrorResponse "Некорректная роль"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
+// @Router /api/movie/search [get]
+// @Security ApiKeyAuth
 func (h *Handler) searchMovie(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		newErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -172,14 +185,18 @@ func (h *Handler) searchMovie(w http.ResponseWriter, r *http.Request) {
 // updateMovie обновляет информацию о фильме.
 // @Summary Обновить информацию о фильме
 // @Description Обновляет информацию о фильме.
-// @Tags Movies
+// @Tags /api/movie/{id}
 // @Accept json
 // @Produce json
 // @Param id path int true "Идентификатор фильма"
 // @Param movie body model.MovieWithActors true "Новые данные о фильме"
-// @Success 201 "Фильм обновлен успешно"
+// @Success 200 "Фильм обновлен успешно"
+// @Failure 400 {object} ErrorResponse "Некорректный запрос или данные"
+// @Failure 403 {object} ErrorResponse "Некорректная роль"
+// @Failure 405 {object} ErrorResponse "Некорректный метод"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /api/movie/{id} [put]
-// @Security BearerAuth
+// @Security ApiKeyAuth
 func (h *Handler) updateMovie(w http.ResponseWriter, r *http.Request) {
 	role, err := getUserRole(r)
 	if err != nil {
@@ -218,19 +235,23 @@ func (h *Handler) updateMovie(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	w.WriteHeader(http.StatusCreated)
+	w.WriteHeader(http.StatusOK)
 	w.Write([]byte("movie updated successfully"))
 }
 
 // getMovie возвращает информацию о фильме по его идентификатору.
 // @Summary Получить информацию о фильме
 // @Description Получает информацию о фильме по его идентификатору.
-// @Tags Movies
+// @Tags /api/movie/{id}
 // @Produce json
 // @Param id path int true "Идентификатор фильма"
 // @Success 200 {object} model.MovieWithActors "Информация о фильме"
+// @Failure 400 {object} ErrorResponse "Некорректный запрос или данные"
+// @Failure 403 {object} ErrorResponse "Некорректная роль"
+// @Failure 405 {object} ErrorResponse "Некорректный метод"
+// @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
 // @Router /api/movie/{id} [get]
-// @Security BearerAuth
+// @Security ApiKeyAuth
 func (h *Handler) getMovie(w http.ResponseWriter, r *http.Request) {
 	path := strings.TrimSuffix(r.URL.Path, "/")
 	parts := strings.Split(path, "/")
